# emg_hgc

./: .gitignore  CITATION.cff  README.md  __init__.py  pyproject.toml  requirements.txt
data/: __init__.py  emg_dataset.py  preprocessing.py  tensor_data.py  windowing.py
features/: aggregation.py  extractors.py
models/: __init__.py  cnn.py  hpo.py
utils/: __init__.py  array_ops.py  labeling.py  logging.py  plotting.py
